<resources>
    <string name="app_name">Snack Alchemist</string>

    <string name="TheSnackAlchemist">TheSnackAlchemist</string>
    <string name="lozinka">Lozinka</string>
    <string name="e_mail">E-mail</string>
    <string name="prijava">Prijava</string>
    <string name="prijavi_se">Prijavite se</string>
    <string name="nemate_ra_un">Nemate račun?</string>
    <string name="registrirajte_se">Registrirajte se</string>
    <string name="dalje">Dalje</string>
    <string name="prezime">Prezime</string>
    <string name="e_mailR">E-mail</string>
    <string name="ime">Ime</string>
    <string name="registracija">Registracija</string>
    <string name="registracija3">Registracija</string>
    <string name="lozinkaR">Lozinka</string>
    <string name="ponovi_lozinku">Ponovi lozinku</string>
    <string name="prihva_am_uvjete_kori_tenja_i_privatnosti">Prihvaćam uvjete korištenja i privatnosti</string>
    <string name="registriraj_se">Registriraj se</string>
    <string name="registracija2">Registracija</string>
    <string name="dr_ava">Država</string>
    <string name="broj_mobitela">Broj mobitela</string>
    <string name="dalje2">Dalje</string>
    <string name="format_broj_mobitela">+%1$d %2$s</string>
    <string name="format_broj_mobitela_kon">%1$s%2$s</string>

    <string name="Catalog">Catalog</string>
    <string name="Articles">Articles</string>
    <string name="CatalogAdmina">CatalogAdmina</string>
    <string name="DodajText">DodajText</string>
    <string name="addProduct">Dodaj novi proizvod</string>
    <string name="Cijena">Cijena : </string>
    <string name="Opis">Opis</string>
    <string name="Kolicina">Količina : </string>
    <string name="Logout">Odjava</string>
    <string name="DodajSliku">Dodaj sliku</string>
    <string name="Homepage">Homepage</string>
    <string name="Orders">Orders</string>
    <string name="Cart">Cart</string>
    <string name="PromoCodes">Promo Codes</string>
    <string name="title_activity_promo_code">PromoCodeActivity</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Email">Email</string>
</resources>