<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="hr.foi.rampu.snackalchemist.RegistrationActivity">

    <TextView
        android:id="@+id/txtNaslov"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registracija3"
        android:textSize="24sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"/>

    <EditText
        android:id="@+id/txtLozinkaB"
        android:inputType="text"
        android:layout_width="271dp"
        android:layout_height="43dp"
        android:layout_marginTop="152dp"
        android:hint="@string/lozinkaR"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtNaslov" />

    <EditText
        android:id="@+id/txtPonoviLozinkaB"
        android:inputType="text"
        android:layout_width="271dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/ponovi_lozinku"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtLozinkaB" />

    <CheckBox
        android:id="@+id/checkBoxPrivatnostB"
        android:layout_width="271dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/prihva_am_uvjete_kori_tenja_i_privatnosti"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtPonoviLozinkaB" />

    <Button
        android:id="@+id/btnRegistrirajSeB"
        android:layout_width="271dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:text="@string/registriraj_se"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBoxPrivatnostB" />

    <TextView
        android:id="@+id/txtNemateRacun"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/nemate_ra_un"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.349"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnRegistrirajSeB" />

    <TextView
        android:id="@+id/txtPrijava"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:clickable="true"
        android:focusable="true"
        android:onClick="prikaziPrijavu"
        android:text="@string/prijavi_se"
        android:textColor="@color/link"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.092"
        app:layout_constraintStart_toEndOf="@+id/txtNemateRacun"
        app:layout_constraintTop_toBottomOf="@+id/btnRegistrirajSeB" />

</androidx.constraintlayout.widget.ConstraintLayout>