<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="hr.foi.rampu.snackalchemist.RegistrationActivity">

    <TextView
        android:id="@+id/txtNaslovLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/prijava"
        android:textSize="24sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"/>

    <EditText
        android:id="@+id/txtEmailLogin"
        android:layout_width="271dp"
        android:layout_height="43dp"
        android:layout_marginTop="152dp"
        android:hint="@string/e_mail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtNaslovLogin" />

    <EditText
        android:id="@+id/txtLozinkaLogin"
        android:layout_width="271dp"
        android:layout_height="43dp"
        android:layout_marginTop="20dp"
        android:hint="@string/lozinka"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtEmailLogin" />

    <Button
        android:id="@+id/btnPrijaviSe"
        android:layout_width="271dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="185dp"
        android:text="@string/prijavi_se"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtLozinkaLogin" />

    <TextView
        android:id="@+id/txtNemateRacun"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/nemate_ra_un"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.326"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnPrijaviSe" />

    <TextView
        android:id="@+id/txtRegistracija"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/registrirajte_se"
        android:textSize="16sp"
        android:textColor="@color/link"
        android:clickable="true"
        android:onClick="prikaziRegistraciju"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.093"
        app:layout_constraintStart_toEndOf="@+id/txtNemateRacun"
        app:layout_constraintTop_toBottomOf="@+id/btnPrijaviSe"
        android:focusable="true" />

</androidx.constraintlayout.widget.ConstraintLayout>
