<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="hr.foi.rampu.snackalchemist.RegistrationActivity">

    <TextView
        android:id="@+id/txtNaslov"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registracija2"
        android:textSize="24sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"/>

    <Spinner
        android:id="@+id/spinnerDrzave"
        android:inputType="text"
        android:layout_width="271dp"
        android:layout_height="48dp"
        android:layout_marginTop="152dp"
        android:hint="@string/dr_ava"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtNaslov" />

    <EditText
        android:id="@+id/txtBrojMobitela"
        android:inputType="phone"
        android:layout_width="271dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerDrzave" />

    <Button
        android:id="@+id/btnDalje2B"
        android:layout_width="271dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="185dp"
        android:text="@string/dalje2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtBrojMobitela" />

    <TextView
        android:id="@+id/txtNemateRacun"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/nemate_ra_un"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.349"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnDalje2B" />

    <TextView
        android:id="@+id/txtPrijava"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:clickable="true"
        android:focusable="true"
        android:onClick="prikaziPrijavu"
        android:text="@string/prijavi_se"
        android:textColor="@color/link"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.092"
        app:layout_constraintStart_toEndOf="@+id/txtNemateRacun"
        app:layout_constraintTop_toBottomOf="@+id/btnDalje2B" />

</androidx.constraintlayout.widget.ConstraintLayout>
