<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:elevation="20dp"
    android:padding="10dp"
    android:layout_margin="10dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/iv_slika_orders"
            android:layout_width="150dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@tools:sample/avatars" />

        <TextView
            android:id="@+id/naziv_orders"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="TextView"
            app:layout_constraintStart_toEndOf="@+id/iv_slika_orders"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/opis_orders"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:text="TextView"
            app:layout_constraintStart_toEndOf="@id/iv_slika_orders"
            app:layout_constraintTop_toBottomOf="@+id/lblOpis" />

        <TextView
            android:id="@+id/količina_orders"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="8dp"
            android:text="TextView"
            app:layout_constraintStart_toEndOf="@+id/lblKolicina"
            app:layout_constraintTop_toBottomOf="@+id/opis_orders" />

        <TextView
            android:id="@+id/cijena_orders"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="8dp"
            android:text="TextView"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/lblCijena" />

        <TextView
            android:id="@+id/lblOpis"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="12dp"
            android:text="@string/Opis"
            app:layout_constraintStart_toEndOf="@+id/iv_slika_orders"
            app:layout_constraintTop_toBottomOf="@+id/naziv_orders" />

        <TextView
            android:id="@+id/lblKolicina"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/Kolicina"
            app:layout_constraintStart_toEndOf="@+id/iv_slika_orders"
            app:layout_constraintTop_toBottomOf="@+id/opis_orders" />

        <TextView
            android:id="@+id/lblCijena"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="10dp"
            android:text="@string/Cijena"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/iv_slika_orders"
            app:layout_constraintTop_toBottomOf="@+id/količina_orders"
            app:layout_constraintVertical_bias="1.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>