<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/product_layout_cart"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:elevation="20dp"
    android:padding="10dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/iv_slikaCart"
            android:layout_width="150dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@tools:sample/avatars" />

        <TextView
            android:id="@+id/nazivCart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="TextView"
            app:layout_constraintStart_toEndOf="@+id/iv_slikaCart"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/opisCart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:text="TextView"
            app:layout_constraintStart_toEndOf="@id/iv_slikaCart"
            app:layout_constraintTop_toBottomOf="@+id/lblOpis" />

        <TextView
            android:id="@+id/količinaCart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="8dp"
            android:text="TextView"
            app:layout_constraintStart_toEndOf="@+id/lblKolicina"
            app:layout_constraintTop_toBottomOf="@+id/opisCart" />

        <TextView
            android:id="@+id/cijenaCart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="8dp"
            android:text="TextView"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/lblCijena" />

        <TextView
            android:id="@+id/lblOpis"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="12dp"
            android:text="@string/Opis"
            app:layout_constraintStart_toEndOf="@+id/iv_slikaCart"
            app:layout_constraintTop_toBottomOf="@+id/nazivCart" />

        <TextView
            android:id="@+id/lblKolicina"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/Kolicina"
            app:layout_constraintStart_toEndOf="@+id/iv_slikaCart"
            app:layout_constraintTop_toBottomOf="@+id/opisCart" />

        <TextView
            android:id="@+id/lblCijena"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="10dp"
            android:text="@string/Cijena"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/iv_slikaCart"
            app:layout_constraintTop_toBottomOf="@+id/količinaCart"
            app:layout_constraintVertical_bias="1.0" />

        <Button
            android:id="@+id/btnProductDelete"
            android:layout_width="77dp"
            android:layout_height="30dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="12dp"
            android:padding="0dp"
            android:text="Izbriši"
            android:textSize="12sp"
            app:iconPadding="0dp"
            app:layout_constraintStart_toEndOf="@+id/cijenaCart"
            app:layout_constraintTop_toBottomOf="@+id/količinaCart" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>